dist/1.0/bin/sample/retrieveUnpackaged/objects/Cost__c.object
<CustomObject>
    <fields>
        <fullName>Cost_Type__c</fullName>
        <label>Cost Type</label>
        <picklist>
            <picklistValues>
                <fullName>Monthly</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>One Off</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Catch up</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <label>Currency</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fee_Date__c</fullName>
        <label>Fee Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fee_PLN__c</fullName>
        <label>Fee PLN</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fee__c</fullName>
        <label>Fee</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Grant_Element2Cost__c</fullName>
        <label>Grant Element2Cost</label>
        <referenceTo>Grant_Element__c</referenceTo>
        <relationshipLabel>Costs</relationshipLabel>
        <relationshipName>Costs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Invoiced__c</fullName>
        <label>Invoiced</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Cost2Cost__c</fullName>
        <label>Other Cost2Cost</label>
        <referenceTo>Other_cost__c</referenceTo>
        <relationshipLabel>Costs</relationshipLabel>
        <relationshipName>Costs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Roof_Rental_Leased_Line2Cost__c</fullName>
        <label>Roof Rental / Leased Line 2Cost</label>
        <referenceTo>RRLL__c</referenceTo>
        <relationshipLabel>Costs</relationshipLabel>
        <relationshipName>Costs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sum_Of_Planned_Cost__c</fullName>
        <label>Planned</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>migration_RL__c</fullName>
        <label>migration_RL</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>migration__c</fullName>
        <label>migration</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Cost</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Fee_Date__c</columns>
        <columns>Other_Cost2Cost__c</columns>
        <columns>Roof_Rental_Leased_Line2Cost__c</columns>
        <columns>Fee_PLN__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Invoiced__c</field>
            <operation>contains</operation>
            <value>direct</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>myksfeepln</fullName>
        <columns>NAME</columns>
        <columns>Fee_Date__c</columns>
        <columns>Fee__c</columns>
        <columns>Fee_PLN__c</columns>
        <columns>Currency__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Fee_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>4/1/2010</value>
        </filters>
        <filters>
            <field>Fee_Date__c</field>
            <operation>lessThan</operation>
            <value>5/1/2010</value>
        </filters>
        <label>myksfeepln</label>
    </listViews>
    <nameField>
        <displayFormat>C{0000000000}</displayFormat>
        <label>Costs Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Costs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>